Bug 462181 - On Wayland, Klipper Meta+V menu appears below windows marked "Keep above others"
Summary: On Wayland, Klipper Meta+V menu appears below windows marked "Keep above others"
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2022-11-23 20:59 UTC by Oded Arbel
Modified: 2024-04-10 14:05 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oded Arbel 2022-11-23 20:59:22 UTC
SUMMARY
When a window has "Keep above others" set, some menus - notably the klipper mouse-position menu and the plasma menus (main menu or any of system tray items menus - appear below that window.

STEPS TO REPRODUCE
1. Open Dolphin (or some other application with a relatively small window)
2. Use the window operations menu to set the new window as "keep above others"
3. Position the window so it overlaps with the Plasma kick off menu.
4. open the kick off menu

OBSERVED RESULT
The plasma menu appears below the "keep above" window, making its content inaccessible.

EXPECTED RESULT
Menus should appear topmost on the window stack so they can be accessed even in the presence of "keep above" menus.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Neon unstable
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7

ADDITIONAL INFORMATION
Interestingly, some menus to appear topmost (above "keep above" windows), such as context menus and the RMB menus of plasma.
Comment 1 guimarcalsilva 2023-01-30 22:19:58 UTC
I can confirm this happens. Even with "Keep above other windows", things that to the user are not windows, like plasmashell or context menus should always take priority. E.g. If the user clicks on an applet or Kickoff, even with the option enabled, at that specific time it's more important to them to interact with the shell than to keep the window above everything.
Comment 2 Oliver Beard 2023-10-25 13:03:42 UTC
*** Bug 466844 has been marked as a duplicate of this bug. ***
Comment 3 Oliver Beard 2023-10-25 14:07:33 UTC
*** Bug 476079 has been marked as a duplicate of this bug. ***
Comment 4 Oliver Beard 2023-10-25 14:08:36 UTC
This also occurs to the Window menu (ALT+F3, Icon), seen in 466844.
Comment 5 Oliver Beard 2023-10-25 14:09:05 UTC
(In reply to Oliver Beard from comment #4)
> This also occurs to the Window menu (ALT+F3, Icon), seen in 466844.

Sorry, I mean 476079, the second duplicate.
Comment 6 Nate Graham 2023-12-13 21:37:41 UTC
Most menus seem fixed now, and I can only reproduce the issue with the Klipper menu. Moving to Plasmashell | Clipboard
Comment 7 spamless.9v5xj 2024-02-11 21:22:37 UTC
By "fixed", does that mean it's  or that it's already been pushed to userspace? Because I am running Plasma 5.27
Comment 8 spamless.9v5xj 2024-02-11 21:25:18 UTC
(Sorry, accidentally pressed "save changes" before finishing writing my comment)
Running Plasma 5.27 and a window set to "keep above others" is still covering up popups such as the Wifi and Bluetooth menus.
Comment 9 Marco Martin 2024-02-13 09:54:13 UTC
This bug is marked as "master" is the version.

to be clear:

Does this happen on both master and 5.27 or 5.27 only?
Comment 10 Oded Arbel 2024-02-13 10:30:45 UTC
The original report is for the Plasma 6 pre-release master. I can currently reproduce this behaviour in Plasma 6 from Neon testing. Other commented here that it also happens in 5.27.
Comment 11 Nate Graham 2024-02-13 15:59:45 UTC
I can also reproduce it in Plasma 6 as well.
Comment 12 Nate Graham 2024-04-10 13:52:28 UTC
Git commit c38e85b7700c5183546e5a76132f2180ba5ccc4b by Nate Graham, on behalf of Tino Lorenz.
Committed on 10/04/2024 at 13:52.
Pushed by ngraham into branch 'master'.

Klipper: fix popup hiding below keep-above windows

This fixes the Meta+V menu appearing below windows set to keep above
other windows. This might not strictly be an AppletPopup, but the role
does what we want and there isn't anything more specific we can use
instead.
FIXED-IN: 6.0.4

M  +1    -0    klipper/klipper.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/c38e85b7700c5183546e5a76132f2180ba5ccc4b
Comment 13 Nate Graham 2024-04-10 14:05:30 UTC
Git commit 5174956d0d68329daebd6ad5f75a68de1423a9e3 by Nate Graham, on behalf of Tino Lorenz.
Committed on 10/04/2024 at 13:53.
Pushed by ngraham into branch 'Plasma/6.0'.

Klipper: fix popup hiding below keep-above windows

This fixes the Meta+V menu appearing below windows set to keep above
other windows. This might not strictly be an AppletPopup, but the role
does what we want and there isn't anything more specific we can use
instead.
FIXED-IN: 6.0.4


(cherry picked from commit c38e85b7700c5183546e5a76132f2180ba5ccc4b)

79fb91cd Klipper: fix popup hiding below keep-above windows

M  +1    -0    klipper/klipper.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/5174956d0d68329daebd6ad5f75a68de1423a9e3