Klipper: fix popup hiding below keep-above windows

This fixes the Meta+V menu appearing below windows set to keep above
other windows. This might not strictly be an AppletPopup, but the role
does what we want and there isn't anything more specific we can use
instead.

BUG: 462181
FIXED-IN: 6.0.4